--- a/postype-event.css
+++ b/postype-event.css
@@ -1,4 +1,4 @@
-@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
 
 
@@ -56,13 +56,16 @@ html {
     line-height: 1.15;
 }
 
+html body {
+    font-family: "Pretendard","Apple SD Gothic Neo","Malgun Gothic",sans-serif;
+}
+
 body {
     overflow-x: hidden;
     overflow-y: scroll;
     min-width: 320px;
     color: #000;
     background-color: #fff;
-    font-family: "Pretendard","Apple SD Gothic Neo","Malgun Gothic",sans-serif;
     margin: 0;
     font-size: 1rem;
     font-weight: 400;
@@ -74,8 +77,23 @@ a {
     background-color: transparent;
 }
 
+b, strong {
+    font-weight: bolder;
+}
+
 button {
     transition: color .15s ease-in-out,background .15s ease-in-out,border-color .15s ease-in-out;
+}
+
+img {
+    vertical-align: middle;
+    border-style: none;
+}
+
+address {
+    margin-bottom: 1rem;
+    font-style: normal;
+    line-height: inherit;
 }
 
 button, input {
@@ -89,7 +107,30 @@ button, input, optgroup, select, textarea {
     line-height: inherit;
 }
 
+.h1, h1 {
+    font-size: 2.5rem;
+}
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    margin-bottom: 0.5rem;
+    font-family: inherit;
+    font-weight: 500;
+    line-height: 1.2;
+    color: inherit;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+}
+
+dl, ol, ul {
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+
 a, a:hover {
+    color: currentColor;
     text-decoration: none;
     outline: none;
 }
@@ -116,7 +157,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     transition: transform .25s ease;
 }
 
-.banner-nav {
+.main-banner-nav {
     position: relative;
     padding: 0;
     flex-flow: row nowrap;
@@ -124,11 +165,13 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     display: flex;
     align-items: center;
 }
+div.container {
+    padding-right: 26px;
+    padding-left: 26px;
+}
 
 .container {
     justify-content: flex-start;
-    padding-right: 26px;
-    padding-left: 26px;
     height: 60px;
     position: relative;
     padding: 0;
@@ -330,11 +373,11 @@ span.logo {
     content: "\f002";
 }
 
-.write-keyword {
+input.write-keyword {
     width: 260px;
     height: 40px;
     padding: 0 48px 0 40px;
-    font-size: 14px;
+    font-size: 15px;
     background-color: #F0F0F0;
     background-clip: border-box;
     border-color: #F0F0F0;
@@ -345,4 +388,391 @@ span.logo {
     color: inherit;
     transition: border-color .15s ease-in-out,background-color .15s ease-in-out;
     outline-offset: -2px;
+}
+
+.write-keyword {
+    border: 1px solid #ced4da;
+}
+
+.write-keyword:focus {
+    color: inherit;
+    box-shadow: none;
+    outline: none;
+}
+
+.cancellation-btn {
+    display: none;
+    font-size: inherit;
+    width: 32px;
+    height: 32px;
+    padding: 3px;
+    line-height: 24px;
+    border: 1px solid transparent;
+    position: relative;
+    color: #000;
+    border-radius: 4px;
+    background: none;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    user-select: none;
+
+}
+
+.sub-banner-nav{
+    box-shadow: unset!important;
+    position: relative;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.sub-container {
+    padding-left: 0;
+    height: 48px!important;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    overflow: hidden;
+    max-width: 1000px;
+    padding-right: 0;
+    position: relative;
+    padding: 0;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.sub-service-items {
+    box-shadow: none;
+    justify-content: unset!important;
+    margin: 0 auto;
+    padding: 0;
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+
+}
+
+.sub-item {
+    height: 48px!important;
+    flex: unset;
+    margin: 0 18px 0 0!important;
+}
+
+.sub-item-link {
+    padding: 12px 2px;
+    font-weight: 500!important;
+    line-height: 24px;
+    font-size: 16px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    border-top: 2px solid transparent;
+    border-bottom: 2px solid transparent;
+    position: relative;
+    color: rgba(0,0,0,.47)!important;
+}
+
+.sub-item-link.target {
+    font-weight: 500!important;
+    color: #000!important;
+    border-bottom: 2px solid;
+}
+
+.main-content {
+    transition: none;
+    backface-visibility: hidden;
+    padding-top: 60px;
+    min-height: calc(100vh - 210px);
+    position: relative;
+    z-index: 10;
+}
+
+.main-container {
+    padding-right: 26px;
+    padding-left: 26px;
+    width: 100%;
+    max-width: 1052px;
+    padding-top: 1.5rem!important;
+    margin-top: 0!important;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.event-header {
+    margin: 56px 0 20px;
+}
+
+.section-title {
+    margin-bottom: 0;
+    font-size: 34px;
+    font-weight: 600;
+    line-height: 1.3;
+    word-break: keep-all;
+}
+
+.nav-pagination {
+    padding: 30px 0;
+    margin: 0 auto;
+}
+
+.pagination {
+    margin: 0;
+    justify-content: center;
+    display: flex;
+    padding-left: 0;
+    list-style: none;
+    border-radius: 0.25rem;
+}
+
+.disabled {
+    cursor: default;
+}
+
+.before-btn {
+    background-color: transparent;
+    opacity: .35;
+    border-color: transparent;
+    border-radius: 3px;
+    color: #6c757d;
+    pointer-events: none;
+    cursor: auto;
+
+    margin: 0 4px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 32px;
+    height: 32px;
+    padding: 5px;
+    font-size: 15px;
+    line-height: 20px;
+    text-align: center;
+    border: 1px solid transparent;
+    position: relative;
+}
+
+.page-item .before-btn{
+    margin-left: 0;
+}
+
+.fa-chevron-left {
+    font-size: 16px;
+    font-family: 'Font Awesome 5 Pro';
+    font-weight: 300;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+}
+
+.fa-chevron-left::before {
+    font-size: 16px;
+}
+
+.page-link {
+    cursor: pointer;
+    margin: 0 4px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 32px;
+    height: 32px;
+    padding: 5px;
+    font-size: 15px;
+    line-height: 20px;
+    text-align: center;
+    color: #757575;
+    background-color: transparent;
+    border: 1px solid transparent;
+    border-radius: 3px;
+    position: relative;
+}
+
+.page-item.active .page-link {
+    color: #3478ff;
+    background-color: transparent;
+    border-color: currentColor;
+    z-index: 1;
+    cursor: pointer;
+}
+
+.fa-chevron-right {
+    font-size: 16px;
+    font-family: 'Font Awesome 5 Pro';
+    font-weight: 300;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+}
+
+.fa-chevron-right::before {
+    content: "\f054";
+}
+
+.event-list {
+    margin-right: -10px;
+    margin-left: -10px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.event {
+    padding-right: 10px;
+    padding-left: 10px;
+    flex: 0 0 50%;
+    max-width: 50%;
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+}
+
+.promotion-banner-wrapper {
+    width: 100%;
+    margin: 20px 0;
+}
+
+.promotion-banner {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.promotion-banner::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border: 1px solid rgba(0,0,0,.05);
+}
+
+.promotion-banner-img {
+    height: 100px;
+    display: block;
+    width: auto;
+    margin: auto;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.promotion-banner-wrapper h3{
+    font-size: 18px;
+    line-height: 25px;
+    margin: 12px 0 4px 0;
+}
+
+.promotion-banner-description {
+    font-size: 14px;
+    color: rgba(0,0,0,.47);
+}
+
+.text-primary {
+    color: #3478ff!important;
+}
+
+.divider {
+    color: rgba(0,0,0,.1);
+}
+
+.footer {
+    padding: 24px 0 25px;
+    font-size: 13px;
+    position: relative;
+    z-index: 1;
+    line-height: 20px;
+    text-align: center;
+    color: #909090;
+    border-top: 1px solid rgba(0,0,0,.05);
+    transition: transform .25s ease,-webkit-transform .25s ease;
+}
+
+.footer-container {
+    padding-right: 26px;
+    padding-left: 26px;
+    width: 100%;
+    max-width: 1052px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.list-inline {
+    margin: 0;
+    padding-left: 0;
+    list-style: none;
+}
+
+.list-inline-item {
+    position: relative;
+    line-height: 1.2;
+    display: inline-block;
+}
+
+.list-inline-item:not(:last-child) {
+    margin-right: 10px;
+}
+
+.list-inline-item:not(:last-child, :nth-last-child(2)):after {
+    content: "";
+    position: absolute;
+    top: calc(50% - 0.45em);
+    right: -7px;
+    width: 0;
+    height: 0.9em;
+    border-right: 1px solid;
+    opacity: .25;
+}
+
+.list-inline-item.margin-right-none {
+    margin-right: 0;
+}
+
+.footer .copyright {
+    display: inline-block;
+    margin: 0 0 0 20px;
+    font-size: 13px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+.footer address {
+    font-size: 12px;
+    max-width: 640px;
+    margin: 20px auto 0;
+    text-align: center;
+    word-break: keep-all;
+    color: #b4b4b4;
+}
+
+.footer address>span:not(:last-child):after {
+    content: '';
+    display: inline-block;
+    width: 0;
+    height: 12px;
+    margin: 2px 4px 0 8px;
+    vertical-align: text-top;
+    border-left: 1px solid rgba(0,0,0,.15);
+}
+
+.guide {
+    font-size: 12px;
+    text-align: center;
+    word-break: keep-all;
+    color: #b4b4b4;
 }
