--- a/goods.css
+++ b/goods.css
@@ -1,4 +1,5 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
 
 html {
     font-family: sans-serif;
@@ -13,38 +14,115 @@ html {
 }
 
 body {
-    /* font-family: "Pretendard","Apple SD Gothic Neo","Malgun Gothic",sans-serif; */
-    display: block;
-    background-color: #fff;
+    margin: 0;
+    font-family: "Pretendard","Apple SD Gothic Neo","Malgun Gothic",sans-serif;
+    /* font에 대해서 어떻게 적용되는지 추가 확인 필요 */
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
+    color: #212529;
+    text-align: left;
+    background-color: #fff;
 }
 
 div {
     display: block
 }
+.blog {
+    /* display: -ms-flexbox; */
+    display: flex;
+    /* -ms-flex-direction: column; */
+    flex-direction: column;
+    min-height: 100vh;
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
+.gray-990, .blog .gray-990, .blog .btn, .blog .gnb .action-group>.btn, .blog .header-custom, .blog .gnb-brand, .header-bg-color:not(.invert-colors) .header-custom .btn-icon, .header-bg-color:not(.invert-colors) .header-custom .btn-subscribe {
+    color: #121212;
+}
+
+.bg-gray-0, .blog .bg-gray-0, .blog-search.no-keyword, .blog-post, .blog .section, .blog .card, .btn-like-user .user-avatar {
+    background-color: #fff;
+}
+
 
 a {
+    color: #007bff;
+    text-decoration: none;
+    background-color: transparent;
+}
+
+a, a:hover {
+    color: currentColor;
+    text-decoration: none;
     outline: none;
 }
 
+.sr-only {
+    border: 0;
+    clip: rect(0,0,0,0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+    white-space: nowrap;
+}
+
+article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
+    display: block;
+}
+
 header {
+    position: relative;
+    z-index: 1030;
+    width: 100%;
+    max-width: 100vw;
+}
+
+.header-is-thin .header, .header-is-fixed .header {
     position: fixed;
     right: 0;
     left: 0;
     width: auto;
-    /* position: relative; */
-    z-index: 1030;
-    width: 100%;
-    max-width: 100vw;
-    transform: translateY(0);
 }
 
-.header-custom{
-    padding-top: 60px;
+.blog-post .header, .blog-post .main, .blog-post .episodes {
+    /* -webkit-transform: translateY(0); */
+    transform: translateY(0);
+    /* -webkit-backface-visibility: hidden; */
+    backface-visibility: hidden;
+    /* -webkit-perspective: 1000px; */
+    perspective: 1000px;
+}
+
+
+.header .header-custom {
     position: relative;
     z-index: 1;
+    padding-top: 56px;
+}
+
+.gnb {
+    position: fixed;
+    top: 0!important;
+    right: 0;
+    left: 0;
+    z-index: 2;
+    -ms-transform: translate3d(0,0,0);
+    /* -webkit-transform: translate3d(0,0,0); */
+    transform: translate3d(0,0,0);
+}
+
+.gnb, .gnb .container {
+    height: 56px;
+}
+
+.header-custom .gnb {
+    background-color: inherit;
+    border-bottom: 1px solid rgba(0,0,0,.05);
 }
 
 .header-custom a {
@@ -62,21 +140,607 @@ header {
     transform: translate3d(0,0,0);
     border-bottom: 1px solid rgba(0,0,0,.05);
 }
+.container {
+    width: 100%;
+    max-width: 1072px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    
+}
 
-/* .gnb-logo{
+.flex, [class*="flex-"]:not([class*="d-md-flex"]), .action-group {
+    /* display: -ms-flexbox; */
+    display: flex;
+}
+
+[class*="flex-"][class*="-middle"], .action-group {
+    -ms-flex-align: center;
+    align-items: center;
+}
+/* 위의 대괄호 안에 있는 부분은 확인 필요 */
+
+.header .container {
+    position: relative;
+}
+
+.gnb .container, .navbar .container {
+    padding-right: 8px;
+    padding-left: 8px;
+}
+
+.gnb .container {
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+}
+
+.gnb, .gnb .container {
+    height: 56px;
+}
+
+a:-webkit-any-link {
+    color: -webkit-link;  
+    /* 해당 컬러를 웹 키트를 가져온다는 건지 확인 필요 */
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.btn-icon {
+    width: 32px;
+    height: 32px;
+    padding: 3px;
+    line-height: 24px;
+    border: 1px solid transparent;
+}
+
+.blog [class*="btn-icon"] {
+    width: auto;
+    min-width: 36px;
+    height: 36px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 25rem;
+}
+
+.blog .btn-icon {
+    width: 36px;
+    padding: 5px;
+}
+
+.blog .gnb-logo {
     position: relative;
     display: block;
-    width: 40px;
-} */
+    padding: 5px;
+    border-radius: 0;
+}
 
-.gnb-logo::before {
-    
+.gnb-logo::before, .gnb-logo::after {
     content: "";
     position: absolute;
+    width: 24px;
+    height: 24px;
+    border-radius: 3px;
+}
+
+.gnb-logo::before {
     background: url(https://d33pksfia2a94m.cloudfront.net/assets/img/postype/logo_black.svg) no-repeat center;
     background-size: contain;
 }
 
-.container.flex-middle {
-    height: 60px;
+.gnb-brand {
+    position: relative;
+    -ms-flex: 1;
+    flex: 1;
+    height: 100%;
+    margin-left: -6px;
+    text-align: center;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 56px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.gnb-brand::before {
+    content: "";
+    position: absolute;
+    top: calc(50% - 7px);
+    left: 12px;
+    height: 14px;
+    border-left: 1px solid;
+}
+
+.gnb-brand::before, .post-reaction .action-group .divider, .dark-mode .blog.header-bg-color:not(.invert-colors) .gnb-brand::before {
+    border-color: rgba(0,0,0,.2);
+}
+
+.text-truncate {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.gnb-brand .gnb-title {
+    padding: 0 24px;
+}
+
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.btn {
+    padding: calc(0.5rem - 1px) calc(1rem - 1px);
+    line-height: 1.5rem;
+    background: none;
+}
+
+button, .btn {
+    cursor: pointer;
+}
+
+.btn {
+    /* display: -ms-inline-flexbox; */
+    display: inline-flex;
+    -ms-flex-align: center;
+    align-items: center;
+    /* -ms-flex-pack: center; */
+    justify-content: center;
+    position: relative;
+    padding: 7px 15px;
+    font-size: 15px;
+    color: #000;
+    border-radius: 4px;
+}
+/* 이건 위에꺼랑 겹칠수도 있겠는데 */
+
+.blog .btn {
+    position: relative;
+    display: inline-block;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    padding: 5px 11px;
+    text-align: center;
+    font-size: 14px;
+    line-height: 24px;
+    background-color: transparent;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.btn:not(:disabled):not(.disabled) {
+    cursor: pointer;
+}
+
+.gnb .action-group .btn-icon {
+    color: inherit;
+}
+
+[class*="fa-"] {
+    font-size: 16px;
+}
+
+.fa, .fas, .far, .fal, .fad, .fab {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+}
+
+.fal {
+    font-family: 'Font Awesome 5 Pro';
+    font-weight: 300;
+}
+
+.blog [class*="btn-icon"] [class*="fa-"] {
+    vertical-align: middle;
+    font-size: 20px;
+}
+
+i {
+    font-style: italic;
+}
+
+.fa-search:before {
+    content: "\f002";
+}
+
+.disable-selection {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+button {
+    appearance: auto;
+    font-style: ;
+    font-variant-ligatures: ;
+    font-variant-caps: ;
+    font-variant-numeric: ;
+    font-variant-east-asian: ;
+    font-variant-alternates: ;
+    font-variant-position: ;
+    font-weight: ;
+    font-stretch: ;
+    font-size: ;
+    font-family: ;
+    font-optical-sizing: ;
+    font-kerning: ;
+    font-feature-settings: ;
+    font-variation-settings: ;
+    text-rendering: auto;
+    color: buttontext;
+    letter-spacing: normal;
+    word-spacing: normal;
+    line-height: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    display: inline-block;
+    text-align: center;
+    align-items: flex-start;
+    cursor: default;
+    box-sizing: border-box;
+    background-color: buttonface;
+    margin: 0em;
+    padding-block: 1px;
+    padding-inline: 6px;
+    border-width: 2px;
+    border-style: outset;
+    border-color: buttonborder;
+    border-image: initial;
+}
+
+button {
+    border-radius: 0;
+}
+
+button, input, optgroup, select, textarea {
+    margin: 0;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+}
+
+button, input {
+    overflow: visible;
+}
+
+button, select {
+    text-transform: none;
+}
+
+button, input, optgroup, select, textarea {
+    font-family: inherit;
+}
+
+[type=reset], [type=submit], button, html [type=button] {
+    -webkit-appearance: button;
+}
+/* 여기서는 webkit이 쓰이네 */
+
+#user-menu-toggle {
+    position: relative;
+}
+
+#user-menu-toggle {
+    padding: 3px;
+}
+
+/* 아이디를 안쓰기로 했지만 해당부분은 사용하였음 */
+
+.fa-user:before {
+    content: "\f007";
+}
+
+.header .header-image {
+    height: calc(100vw / 4);
+    margin-bottom: -20px;
+}
+
+.header-is-thin .header .header-image {
+    display: none!important;
+}
+
+.container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.navbar {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 0.5rem 1rem;
+}
+
+.navbar {
+    padding: 0;
+}
+
+.navbar, .navbar .container {
+    height: 48px;
+}
+
+.lnb::before {
+    content: "";
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    border-top: 1px solid;
+}
+
+.lnb::before {
+    bottom: -1px;
+}
+
+.lnb::before, .viewer-navbar::before, .section-header, .notice-list, .post-grid-view .post-list~.nav-pagination, .series-grid-view .series-list~.nav-pagination, .series-info-wrap, .series-info .article-stats li+li::before, .pay, .pay-purchase .product-list li, .blog .tag-list .tag, .post-reaction .btn-like.btn-default, .episodes .navbar::before, .section.author-info, .membership-info, .membership-info .section-header.has-img, .mplan-grid.row .mplan, .mplan-grid.row .mplan-img::after, .comment-list {
+    border-color: rgba(0,0,0,.05);
+}
+
+.navbar>.container, .navbar>.container-fluid {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+
+.navbar>.container {
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+}
+
+.navbar-left, .navbar-center, .navbar-right {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.navbar-left, .navbar-right {
+    -ms-flex: 0 0 25%;
+    flex: 0 0 25%;
+    max-width: 25%;
+}
+
+.blog .btn-icon .fa-chevron-left {
+    margin: 0 1px 0 -1px;
+}
+
+.fa-chevron-left:before {
+    content: "\f053";
+}
+
+.navbar-center {
+    overflow: hidden;
+}
+
+.navbar-title-wrap {
+    max-width: 320px;
+    overflow: hidden;
+    text-align: center;
+    font-size: 12px;
+    line-height: 14px;
+}
+
+.navbar-title {
+    margin: 0;
+    line-height: 0;
+}
+
+.navbar-title span {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.navbar-right {
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+}
+
+.dropdown, .dropleft, .dropright, .dropup {
+    position: relative;
+}
+
+.dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1000;
+    display: none;
+    float: left;
+    min-width: 10rem;
+    padding: 0.5rem 0;
+    margin: 0.125rem 0 0;
+    font-size: 1rem;
+    color: #212529;
+    text-align: left;
+    list-style: none;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: 0.25rem;
+}
+
+.dropdown-menu-right {
+    right: 0;
+    left: auto;
+}
+
+.dropdown-menu {
+    min-width: 200px;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    color: #606060;
+    border-radius: 5px;
+}
+
+.dropdown-menu-right {
+    right: 0;
+    left: auto;
+}
+
+.blog .dropdown-menu {
+    min-width: 200px;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    color: #606060;
+    border-radius: 5px;
+}
+
+form {
+    display: block;
+    margin-top: 0em;
+}
+
+.dropdown-item {
+    display: block;
+    width: 100%;
+    padding: 0.25rem 1.5rem;
+    clear: both;
+    font-weight: 400;
+    color: #212529;
+    text-align: inherit;
+    white-space: nowrap;
+    background-color: transparent;
+    border: 0;
+}
+/* 아래 기능과 중복된 값들이 포함되어 있는 것으로 확인 */
+.dropdown-item {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    position: relative;
+    padding: 6px 20px;
+    font-size: 15px;
+    line-height: 24px;
+    color: #606060;
+}
+
+.font-size-setting, .background-setting {
+    padding: 6px 33px!important;
+}
+
+label {
+    display: inline-block;
+    margin-bottom: 0.5rem;
+}
+
+label {
+    cursor: default;
+}
+
+.dropdown-btn-group {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.font-size-setting [id*="btn-"], .background-setting [id*="background-"] {
+    display: -ms-inline-flexbox!important;
+    display: inline-flex!important;
+    width: 32px!important;
+    height: 32px!important;
+    padding: 3px!important;
+    font-size: 14px!important;
+    line-height: 24px!important;
+    color: #555!important;
+    border-color: #ddd!important;
+    border-radius: 50%!important;
+}
+
+.font-size-setting .btn, .background-setting .btn {
+    margin-left: 0!important;
+}
+
+.fa-plus, .fa-minus {
+    font-size: 15px;
+}
+
+.fal {
+    font-family: 'Font Awesome 5 Pro';
+    font-weight: 300;
+}
+
+.dropdown-item i {
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    vertical-align: top;
+}
+
+.font-icon {
+    display: inline-block;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+    vertical-align: top;
+}
+
+.dropdown-divider {
+    height: 0;
+    margin: 0.5rem 0;
+    overflow: hidden;
+    border-top: 1px solid #e9ecef;
+}
+
+.dropdown-divider {
+    border-color: rgba(0,0,0,.05);
+}
+
+.background-setting .btn:focus, .background-setting .btn:hover, .background-setting .btn.active, .background-setting .btn:active {
+    color: #3478ff!important;
+    border-color: currentColor!important;
+    box-shadow: 0 0 0 1px currentColor!important;
+}
+
+.background-setting #background-black {
+    background-color: #202020;
+}
+
+
+.background-setting #background-black:not(.active) {
+    border-color: #202020;
+}
+
+.dropdown-menu .dropdown-divider:last-child {
+    display: none;
 }
